--- a/data-science.html
+++ b/data-science.html
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/8e3c18f5-c648-4c82-8f62-d90cb3be3c59'>Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/8e3c18f5-c648-4c82-8f62-d90cb3be3c59'>Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/1PpI3hq6wW/Customer-Data-Scientist-Solution-Architect-USParisMunich'>Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/1PpI3hq6wW/Customer-Data-Scientist-Solution-Architect-USParisMunich'>Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -187,7 +187,7 @@ have?...</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -207,7 +207,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/data-scientist-6519'>Data Scientist - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/data-scientist-6519'>Data Scientist - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -241,7 +241,7 @@ have?...</p>
 <p>Jul 10, 2019 ... Senior Data Scientist - Operational Intelligence Platform. Los Gatos, California. 
 Streaming ? Platform Engineering. Full-time?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Self-identification of veteran status (Completion is voluntary and will not subject 
 you to adverse treatment). Tubular Labs is a Government contractor subject to?...</p>
@@ -250,7 +250,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -275,13 +275,13 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p>3 days ago ... Job Summary: The Splunk Data Analytics and Business Intelligence Data 
 Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://friss.recruitee.com/o/fight-fraud-as-a-data-scientist'>
+<h5><a href='https://friss.recruitee.com/o/fight-fraud-as-a-data-scientist'>
       FIGHT FRAUD! As a Data Scientist - FRISS | fraud, risk & compliance
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -289,7 +289,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
-<h5><a href='https://thehutgroup.workable.com/j/37F3E68EDA?viewed=true'>The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thehutgroup.workable.com/j/37F3E68EDA?viewed=true'>The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
@@ -314,7 +314,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241001-senior-data-scientist'>DataProphet Senior Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241001-senior-data-scientist'>DataProphet Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -362,7 +362,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -427,7 +427,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -457,7 +457,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
 <hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 12, 2019 ... Are you fascinated by the possibilities presented by the IoT, machine learning, 
 and artificial intelligence advances? In an increasingly connected world, massive
